--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "docweaver",
   "publisher": "itsabk",
   "displayName": "DocWeaver",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/itsabk/docweaver.git"
+  },
   "description": "Create comprehensive project documentation using AI-powered file analysis and intelligent project summaries.",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "engines": {
     "vscode": "^1.96.0"
   },
